--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todo{
+  color: black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color:yellow;
+  width: 45%;
+  height: 16vw;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+label{
+  font-size: 20px;
+  font-weight: bold;
+  color:gray;
+  margin-left: 5%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1{
+  color:palevioletred;
+  font-size: 50px;
+  width: 40%;
+  padding: 0px;
+ 
+  
+}
+input{
+  height: 20%;
+  border: solid 1px grey ;
+  padding: 2vw;
+  border-radius: 10px;
+  margin-left: 10%;
+}
+.add{
+  height: 20%;
+  border: solid 1px grey ;
+  padding: 1vw;
+  margin-left: 20%;
+  width: 10%;
+  
+}
+.element {
+  height: 30%;
+  width: 45%;
+  bottom: 20%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
+  
+.button-1{
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin-left: 240px;
+  width: 10%;
+  height: 30%;
+  margin-top: 60px;
+  border-radius: 5px;
+  font-size: 15px;
+  margin-right: 28px ;
+
+
+  
+  
 }
+.button-2{
+  
+  
+  width: 10%;
+  height: 30%;
+  margin-top: 60px;
+  border-radius: 5px;
+  font-size:15px;
+}
+.complete{
+  text-decoration: line-through;
+}
+  
